# Yahoo_fantasy_API

./: .env.example  .gitignore  README.md  config.yaml  fantasy_daily.md  fantasy_daily.py  fantasy_daily.yaml  pyproject.toml
.github/workflows/: fantasy_daily.yaml
